# x8Dsub-byte

./: README.md  final_verification.py  final_verification_complete.py  pyproject.toml  test_x8d_algorithm.py  verify_framework_alignment.py
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/x8dsub_byte/: __init__.py  test_suite.py
proofs/: integrity_proof.py  integrity_proof_65536.py  integrity_proof_native.py  parameter_compression_proof.py  sub_byte_vocabulary.json  validation_report_65536.json  validation_report_native.json
safetensors/: README.md
safetensors/src/: lib.rs  x8d_tensor.rs
skills/x8d-sub-byte-orchestrator/: SKILL.md
src/: lib.rs  slice.rs  x8d_tensor.rs
x8Dquanta/: __init__.py
x8dsub_byte/: Cargo.toml  pyproject.toml
x8dsub_byte/src/: lib.rs
