[package]
name = "x8dsub_byte"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
homepage = "https://bapx.in"
repository = "https://github.com/bapXai/x8Dsub-byte"
documentation = "https://docs.rs/x8dsub_byte/"
license = "Apache-2.0"
keywords = ["x8dsub_byte", "bapx", "Tensors", "Pytorch", "Tensorflow", "sub-byte", "compression"]
readme = "./README.md"
description = """
x8Dsub-byte: Sub-byte tensor compression library using b' = b * 0.001 algorithm.
Provides functions to read and write tensors with sub-byte compression for massive storage reduction.
The format applies scalar multiplication to achieve up to 90% compression while maintaining bit-perfect reconstruction.
Developed by Mohamed Harris (@getwinharris) at BapX Media Hub, Coimbatore.
"""
exclude = ["rust-toolchain", "target/*", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.16", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.6"
memmap2 = "0.9"
proptest = "1.7"

[features]
default = ["std"]
std = ["serde/default", "serde_json/default"]
# Kept for backward compatibility - no-op since alloc is always available
alloc = []

[[bench]]
name = "benchmark"
harness = false